# gas_sensors_service

./: .gitignore  Dockerfile  README.md  app.py  compose.yaml  pyproject.toml
config/: config.yaml  logging.yaml
src/: globals.py  settings.py
src/combinations/: calc.py  entities.py  features.py  plot.py
src/dao/: files.py  redis.py
src/worker/: __init__.py  worker.py
